--- a/app/src/main/res/layout/activity_solutions_download.xml
+++ b/app/src/main/res/layout/activity_solutions_download.xml
@@ -57,6 +57,7 @@
         android:layout_width="410dp"
         android:layout_height="40dp"
         android:layout_marginTop="8dp"
+        android:background="@drawable/moduleb"
         android:gravity="center"
         android:text="Module Name"
         android:textColor="#000000"
@@ -120,6 +121,7 @@
         android:layout_height="33dp"
         android:layout_marginTop="17dp"
         android:layout_marginBottom="32dp"
+        android:background="@drawable/assesment"
         android:gravity="center"
         android:text="Review a Peer Solution"
         android:textStyle="italic"
