--- a/app/src/main/res/layout/activity_student_peer_review.xml
+++ b/app/src/main/res/layout/activity_student_peer_review.xml
@@ -20,9 +20,10 @@
 
     <TextView
         android:id="@+id/SolutionsModuleText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="410dp"
+        android:layout_height="40dp"
         android:layout_marginTop="24dp"
+        android:background="@drawable/moduleb"
         android:gravity="center"
         android:text="Module Name"
         android:textColor="#000000"
@@ -70,6 +71,7 @@
         android:layout_height="45dp"
         android:layout_marginTop="17dp"
         android:layout_marginBottom="337dp"
+        android:background="@drawable/assesment"
         android:text="Submit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
