--- a/app/src/main/res/layout/activity_student_solutions.xml
+++ b/app/src/main/res/layout/activity_student_solutions.xml
@@ -8,9 +8,10 @@
 
     <TextView
         android:id="@+id/studentSol"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="400dp"
+        android:layout_height="50dp"
         android:layout_marginTop="16dp"
+        android:background="@drawable/assesment"
         android:gravity="center"
         android:text="Student Solutions"
         android:textColor="#050505"
