--- a/app/src/main/res/layout/activity_attendance.xml
+++ b/app/src/main/res/layout/activity_attendance.xml
@@ -13,70 +13,64 @@
         android:layout_height="39dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:layout_marginBottom="232dp"
         android:background="#9FFFFFFF"
         android:focusable="false"
         android:text="Your attendance is: "
+
+        android:textAlignment="center"
+
         android:textSize="24sp"
 
-    android:textAlignment="center"
-
         android:textStyle="bold"
-
-        app:layout_constraintBottom_toTopOf="@+id/buttonMissed"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ModuleNameText" />
 
     <Button
         android:id="@+id/buttonAttended"
 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#1580c6"
+        android:layout_width="100dp"
+        android:layout_height="70dp"
+        android:background="@drawable/assesment"
         android:text="Attended"
-        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/buttonMissed"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/attendancePercentageTextView"
-        app:layout_constraintVertical_bias="0.655" />
+        app:layout_constraintTop_toBottomOf="@+id/toAttendMissView" />
 
     <Button
         android:id="@+id/buttonMissed"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#c64715"
+        android:layout_width="100dp"
+        android:layout_height="70dp"
+        android:background="@drawable/remind"
         android:text="Missed"
 
-        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.379"
         app:layout_constraintStart_toEndOf="@+id/buttonAttended"
-        app:layout_constraintTop_toTopOf="parent"
 
-        app:layout_constraintVertical_bias="0.779" />
+        app:layout_constraintTop_toBottomOf="@+id/toAttendMissView" />
 
 
     <TextView
         android:id="@+id/toAttendMissView"
         android:layout_width="0dp"
-        android:layout_height="126dp"
+        android:layout_height="200dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:layout_marginBottom="73dp"
         android:background="#9FFFFFFF"
         android:focusable="false"
         android:foregroundGravity="fill_horizontal|clip_horizontal|center"
         android:gravity="clip_horizontal|center|fill_horizontal"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/buttonAttended"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/attendancePercentageTextView" />
@@ -90,14 +84,12 @@
         android:layout_marginTop="33dp"
         android:layout_marginEnd="40dp"
         android:layout_marginRight="40dp"
-        android:layout_marginBottom="61dp"
-        android:background="#9FFFFFFF"
+        android:background="@drawable/moduleb"
         android:focusable="false"
         android:gravity="center"
         android:text="TextView"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/attendancePercentageTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
