--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,7 +48,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="-3dp"
         android:layout_marginRight="-3dp"
-        android:background="@drawable/done1"
+        android:background="@drawable/textb1"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
@@ -85,10 +85,11 @@
         android:textColor="#FFFFFF"
         android:textSize="18sp" />
 
-      <Button
+    <Button
         android:id="@+id/TeacherPage"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
+        android:background="@drawable/moduleb"
         android:text="Teacher Login" />
 
 
