--- a/app/src/main/res/layout/activity_reminders1.xml
+++ b/app/src/main/res/layout/activity_reminders1.xml
@@ -30,9 +30,10 @@
         android:layout_width="230dp"
         android:layout_height="42dp"
         android:layout_marginTop="8dp"
+        android:background="@drawable/remind"
         android:gravity="center"
         android:text="Set a Reminder"
-        android:textColor="#37993B"
+        android:textColor="@color/colorPrimary"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -164,14 +165,15 @@
 
     <Button
         android:id="@+id/setAlarm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
         android:layout_marginStart="96dp"
         android:layout_marginLeft="96dp"
         android:layout_marginTop="202dp"
         android:layout_marginEnd="39dp"
         android:layout_marginRight="39dp"
         android:layout_marginBottom="25dp"
+        android:background="@drawable/assesment"
         android:text="Set"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/cancelAlarm"
@@ -180,14 +182,15 @@
 
     <Button
         android:id="@+id/cancelAlarm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="206dp"
         android:layout_marginEnd="100dp"
         android:layout_marginRight="100dp"
         android:layout_marginBottom="25dp"
+        android:background="@drawable/moduleb"
         android:text="Cancel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
