--- a/app/src/main/res/layout/activity_select_modules.xml
+++ b/app/src/main/res/layout/activity_select_modules.xml
@@ -13,15 +13,14 @@
         android:layout_width="285dp"
         android:layout_height="62dp"
 
-        android:background="@drawable/moduleselect"
-
         android:layout_marginStart="8dp"
+
         android:layout_marginLeft="8dp"
         android:layout_marginTop="25dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="516dp"
-        android:text="SELECT MODULES"
+        android:background="@drawable/moduleselect"
 
         android:textColor="#009688"
         android:textColorHighlight="#00FFFFFF"
@@ -30,19 +29,17 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
 
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/registerModules"
-        android:background="@drawable/registermodule"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
         android:layout_marginTop="405dp"
         android:layout_marginBottom="63dp"
-        android:text="REGISTER MODULES"
+        android:background="@drawable/registermodule"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
