--- a/app/src/main/res/layout/activity_student_upload.xml
+++ b/app/src/main/res/layout/activity_student_upload.xml
@@ -8,13 +8,14 @@
 
     <Button
         android:id="@+id/btn_upload"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
         android:layout_marginStart="161dp"
         android:layout_marginLeft="161dp"
         android:layout_marginTop="45dp"
         android:layout_marginEnd="162dp"
         android:layout_marginRight="162dp"
+        android:background="@drawable/assesment"
         android:text="Upload"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -41,6 +42,7 @@
         android:layout_width="176dp"
         android:layout_height="41dp"
         android:layout_marginTop="24dp"
+        android:background="@drawable/moduleb"
         android:gravity="center"
         android:text="Module Name"
         android:textColor="#000000"
