--- a/app/src/main/res/layout/activity_contact_page.xml
+++ b/app/src/main/res/layout/activity_contact_page.xml
@@ -1,126 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
     android:background="@drawable/contactuss"
-    tools:context=".ContactPage">
-
-
-
-    <!--<TextView
-
-        android:id="@+id/c1"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginTop="49dp"
-        android:layout_marginBottom="10dp"
-        android:gravity="center_vertical"
-        android:text="College Emergency Telephone No.  +353 1 896 1999"
-        android:textSize="16dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/c2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/contactus" />
-
-
-    <TextView
-        android:id="@+id/c2"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginTop="13dp"
-        android:layout_marginBottom="10dp"
-        android:gravity="center_vertical"
-        android:text="Academic Registry Telephone No. +353 1 896 4500"
-        android:textSize="16dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/c3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/c1" />
-
-    <TextView
-        android:id="@+id/c3"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="235dp"
-        android:gravity="center_vertical"
-        android:text="Health Services Telephone No. +353 1 896 1556"
-        android:textSize="16dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/rtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/c2" />
-
-
-    <TextView
-        android:id="@+id/c4"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginTop="23dp"
-        android:layout_marginBottom="163dp"
-        android:gravity="center_vertical"
-        android:text="Global Room Telephone No. +353 1 896 2097"
-        android:textSize="16dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/rtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/c3" />
-
-
-    <TextView
-        android:id="@+id/c5"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginBottom="90dp"
-        android:gravity="center_vertical"
-        android:text="Accomodation Telephone No. +353 1 896 1177"
-        android:textSize="16dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/rtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/c4"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <TextView
-        android:id="@+id/c6"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginTop="21dp"
-        android:layout_marginBottom="24dp"
-        android:gravity="center_vertical"
-        android:text="Career Services Telephone No. +353 1 896 1721"
-        android:textSize="16dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/rtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-
-        app:layout_constraintTop_toBottomOf="@+id/c5" />-->
-
-    <Button
-        android:id="@+id/rtn"
-        android:layout_width="143dp"
-        android:layout_height="40dp"
-        android:background="@drawable/returnn"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.865" />
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    tools:context=".ContactPage" />
