--- a/app/src/main/res/layout/activity_review.xml
+++ b/app/src/main/res/layout/activity_review.xml
@@ -128,24 +128,23 @@
 
     <EditText
         android:id="@+id/ModuleName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="370dp"
+        android:layout_height="70dp"
         android:layout_marginStart="100dp"
-        android:layout_marginLeft="100dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="100dp"
-        android:layout_marginRight="100dp"
+        android:background="@drawable/moduleb"
         android:gravity="center_horizontal|center_vertical"
         android:includeFontPadding="false"
         android:inputType="textPersonName"
-        android:text="Name"
 
+        android:text="Name"
         android:textAlignment="center"
         android:textColor="#BF4A3F"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
