--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,7 +29,7 @@
         android:layout_marginRight="65dp"
         android:background="@drawable/assesment"
         android:focusable="true"
-        android:hint="Enter Name"
+        android:hint=" E-mail"
 
         android:textColorHighlight="#00CEBA"
         android:textColorHint="#009688" />
@@ -50,7 +50,7 @@
         android:layout_marginRight="0dp"
         android:background="@drawable/textb1"
         android:ems="10"
-        android:hint="Password"
+        android:hint=" Password"
         android:inputType="textPassword"
         android:textColorHint="#009688" />
 
@@ -100,8 +100,8 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="79dp"
-        android:layout_marginRight="79dp"
+        android:layout_marginEnd="93dp"
+        android:layout_marginRight="93dp"
         android:layout_marginBottom="170dp"
         android:background="@drawable/cancel"
         android:textColor="#ffffff"
@@ -111,9 +111,13 @@
         android:id="@+id/buttonAttended"
         android:layout_width="98dp"
         android:layout_height="42dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="35dp"
-        android:layout_marginRight="35dp"
+        android:layout_marginStart="77dp"
+        android:layout_marginLeft="77dp"
+        android:layout_marginEnd="45dp"
+        android:layout_marginRight="45dp"
         android:layout_marginBottom="173dp"
         android:layout_toStartOf="@+id/buttonMissed"
         android:layout_toLeftOf="@+id/buttonMissed"
