--- a/app/src/main/res/layout/activity_solutions_download.xml
+++ b/app/src/main/res/layout/activity_solutions_download.xml
@@ -11,19 +11,19 @@
     <ListView
 
         android:id="@+id/myListView"
-        android:layout_width="389dp"
-        android:layout_height="292dp"
-        android:layout_marginTop="22dp"
+        android:layout_width="403dp"
+        android:layout_height="301dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="12dp"
         android:padding="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/view2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/head">
 
     </ListView>
 
-   <TextView
+    <TextView
         android:id="@+id/head"
         android:layout_width="408dp"
         android:layout_height="31dp"
