--- a/app/src/main/res/layout/activity_student_peer_review.xml
+++ b/app/src/main/res/layout/activity_student_peer_review.xml
@@ -6,15 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".StudentPeerReview">
 
+    <com.hsalf.smileyrating.SmileyRating
+        android:id="@+id/smile_rating"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="4dp"
+        app:layout_constraintBottom_toTopOf="@+id/editText4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/myList" />
+
     <ListView
         android:id="@+id/myList"
         android:layout_width="397dp"
         android:layout_height="51dp"
-        android:layout_marginTop="90dp"
-        android:layout_marginBottom="1dp"
-        app:layout_constraintBottom_toTopOf="@+id/editText4"
+        android:layout_marginTop="120dp"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/smile_rating"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -39,11 +50,9 @@
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
         android:text="Peer Review"
         android:textColor="#000000"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/myList"
         app:layout_constraintEnd_toStartOf="@+id/myList"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/myList"
@@ -53,29 +62,29 @@
         android:id="@+id/editText4"
         android:layout_width="392dp"
         android:layout_height="58dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="17dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="24dp"
         android:ems="10"
         android:gravity="bottom|start"
         android:hint="Write a review"
         android:inputType="textMultiLine"
         app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.368"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/myList" />
+        app:layout_constraintTop_toBottomOf="@+id/smile_rating" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="120dp"
         android:layout_height="45dp"
-        android:layout_marginTop="17dp"
-        android:layout_marginBottom="337dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="198dp"
         android:background="@drawable/assesment"
         android:text="Submit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText4" />
 
