--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -82,7 +82,7 @@
         android:layout_marginLeft="59dp"
         android:layout_marginTop="15dp"
         android:text="Attempts Left:"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:textSize="18sp" />
 
     <Button
